fix: stretch backdrop

--- a/blocks/form/form.css
+++ b/blocks/form/form.css
@@ -135,7 +135,7 @@
   opacity: 0.5;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100vh;
-z-index: 1;
+  right: 0;
+  bottom: 0;
+  z-index: 1;
 }
